# marla

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  README.md  compose.yml  go.mod  go.sum  main.go
cmd/: root.go
cmd/marla/: main.go  marla.go
config/: marla.yml
contents/: index.md
crates/marla_core/: Cargo.toml
crates/marla_core/src/: lib.rs
crates/marla_core/src/config/: mod.rs
crates/marla_core/src/entities/: config.rs  data_map.rs  mod.rs  page.rs  page_collection.rs  site.rs
crates/marla_core/src/entities/fields/: mod.rs  page_draft.rs  page_template_path.rs  required_string.rs
crates/marla_core/src/logger/: mod.rs
crates/marla_core/src/ports/: mod.rs
crates/marla_core/src/ports/page_collection/: mod.rs
crates/marla_core/src/serialization/: mod.rs
crates/marla_core/src/services/page_collection/: mod.rs
crates/marla_core/src/services/page_collection/create_page_collection/: mod.rs
crates/marla_graphql/: Cargo.toml
crates/marla_graphql/src/: context.rs  handler.rs  query.rs  schema.rs  server.rs
crates/marla_http/: Cargo.toml
crates/marla_http/src/: handler.rs  lib.rs  server.rs  sitemap.rs
crates/marla_markdown/: Cargo.toml
crates/marla_markdown/src/: frontmatter.rs  lib.rs
crates/marla_server_adapters/: Cargo.toml
crates/marla_server_adapters/src/page_collection/: mod.rs
crates/marla_site/: Cargo.toml
crates/marla_site/graph/: schema.graphql  schema.json
crates/marla_site/graph/queries/: pages.graphql
crates/marla_site/src/: lib.rs
crates/marla_site/src/data/: mod.rs
crates/marla_site/src/page/: index.rs  markdown.rs  meta.rs  mod.rs  queries.rs
crates/marla_site/src/services/: page.rs
crates/marla_site/src/site/: mod.rs
crates/marla_site/src/theme/: functions.rs  mod.rs
crates/marla_site/src/utils/: mod.rs
docs/: entities.md  usecases.md
graph/: schema.graphql
graph/queries/: page.graphql
pkg/adapters/: config.go  logger.go  page_collection.go  site.go  theme.go
pkg/adapters/utils/: page_from_markdown.go  page_path.go
pkg/app/: app.go
pkg/core/: core.go
pkg/core/entities/: config.go  page.go  page_collection.go  site.go
pkg/core/fields/: http_port.go  path.go  required_string.go  time.go
pkg/core/ports/: config.go  logger.go  page_collection.go  site.go  theme.go
pkg/core/services/: config.go  page_collection.go  site.go  theme.go
pkg/server/: server.go
site/: .gitignore
site/content/: .gitignore  index.html  index.md
site/content/blog/: my-love-to-rust-and-go.de.md  my-love-to-rust-and-go.md
site/marla-elements/: tailwind.config.js  vite.config.ts
site/marla-elements/src/: index.ts
site/marla-elements/src/elements/: index.ts
site/marla-elements/src/elements/hello-world/: index.tsx
site/themes/marla/: layout.html  page.html
site/themes/marla/marla-elements/: index.html  package.json  tailwind.config.js  vite.config.ts
site/themes/marla/marla-elements/src/assets/: index.css
site/themes/marla/marla-elements/src/assets/css/fontawesome/: all.css
site/themes/marla/marla-elements/src/elements/: index.ts
site/themes/marla/marla-elements/src/utils/: index.ts
site/themes/marla/static/: robot.txt
site/themes/marla/static/assets/js/: flamethrower.js
site/themes/marla/static/marla-elements/: marla-elements.mjs  marla-elements.umd.js  style.css
site/themes/marla/templates/: index.html  layout.html  page.html
src/: lib.rs
src/config/: mod.rs
src/graphql/: handler.rs  mod.rs  query.rs  schema.rs  server.rs
src/http/: handler.rs  server.rs
src/logger/: mod.rs
src/markdown/: mod.rs
src/page/: mod.rs  queries.rs
src/server/: mod.rs
src/theme/: mod.rs
