[package]
name = "website-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
anyhow = "1.0.61"
tokio = { version = "1", features = ["full"] }
env_logger = "0.9.0"
juniper = "0.15.10"
juniper_actix = "0.4.0"
actix-cors = "0.6.2"
config = "0.13.1"
lazy_static = "1.4.0"
home = "0.5.3"
log = "0.4.17"
pulldown-cmark = "0.9.2"
ammonia = "3.2.0"
maplit = "1.0.2"
toml = "0.5.9"
serde = "1.0.143"
num_cpus = "1.13.1"
graphql_client = "0.11.0"
reqwest = { version = "0.11.11", features = ["json", "blocking"] }
derive_more = "0.99.17"