[package]
name = "website-rs"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
  "crates/*"
]

[dependencies]
marla_core = { path = "./crates/marla_core", version = "0.1.0" }
marla_http = { path = "./crates/marla_http", version = "0.1.0" }
marla_graphql = { path = "./crates/marla_graphql", version = "0.1.0" }
tokio = { version = "1", features = ["full"] }