[package]
name = "marla_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"], optional = true }
serde_json = { version = "1.0.95", optional = true }
chrono = "0.4.23"

[features]
default = []
serde = ["dep:serde", "dep:serde_json", "chrono/serde"]
