[package]
name = "marla_graphql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
marla_core = { path = "../marla_core", version = "0.1.0" }
marla_site = { path = "../marla_site", version = "0.1.0" }
juniper = "0.15.10"
juniper_actix = "0.4.0"
tokio = { version = "1", features = ["full"] }
actix-web = "4"
actix-cors = "0.6.2"
anyhow = "1.0.61"
log = "0.4.17"
num_cpus = "1.13.1"
toml = "0.5.9"