[package]
name = "marla_site"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
marla_core = { path = "../marla_core", version = "0.1.0" }
marla_markdown = { path = "../marla_markdown", version = "0.1.0" }
anyhow = "1.0.61"
serde = "1.0.143"
juniper = "0.15.10"
chrono = { version = "0.4", features = ["serde"] }
graphql_client = "0.11.0"
reqwest = { version = "0.11.11", features = ["json", "blocking"] }
moka = { version = "0.9.3", features = ["future"] }
tera = "1.17.0"
url = "2.2.2"
glob = "0.3.0"
log = "0.4.17"
path-clean = "0.1.0"