[package]
name = "marla_site"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
marla_core = { path = "../marla_core", version = "0.1.0" }
marla_markdown = { path = "../marla_markdown", version = "0.1.0" }
anyhow = "1.0.61"
serde = "1.0.143"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11.11", features = ["json", "blocking"] }
tera = "1.17.0"
url = "2.2.2"
glob = "0.3.0"
log = "0.4.17"
path-clean = "0.1.0"
serde_json = "1.0.83"
toml = "0.5.9"
voca_rs = "1.14.0"
regex = "1.6.0"
lazy_static = "1.4.0"
tokio = { version = "1", features = ["full"] }
notify = { version = "5.0.0-pre.16" }
futures = "0.3.23"